--- a/index.html
+++ b/index.html
@@ -12,7 +12,27 @@
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <img src="assets/img/vassourax.svg" alt="">
 
+            <nav>
+                <ul>
+                    <li><a href="#">Vassouras</a></li>
+                    <li><a href="#">Seguros</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
