--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <img src="assets/img/vassourax.svg" alt="">
+    <header class="header-bg">
+        <div class="header">
+            <a href="./">
+                <img src="assets/img/vassourax.svg" alt="Vassourax">
+            </a>
 
-            <nav>
-                <ul>
-                    <li><a href="#">Vassouras</a></li>
-                    <li><a href="#">Seguros</a></li>
-                    <li><a href="#">Contato</a></li>
+            <nav aria-label="primaria">
+                <ul class="header-menu">
+                    <li><a href="/vassouras.html">Vassouras</a></li>
+                    <li><a href="/seguros.html">Seguros</a></li>
+                    <li><a href="/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
