--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
         </div>
     </header>
 
-    <main>
+    <main class="introducao-bg">
+        <div class="introducao">
+            <div class="introducao-conteudo">
+                <h1>Vassouras sob medida<span>.</span></h1>
+                <p>Oferecemos apenas produtos personalizados pela nossa equipe, feitos à mão e com muito apreço aos detalhes.</p>
+                <a href="#">Escolha a sua</a>
+            </div>
 
+            <img src="assets/img/fotos/introducao.jpg" alt="Vassoura mágica preta">
+        </div>
     </main>
 
     <footer>
