Atualizei o CSS da introducao, adicionando o efeito vazado

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Oferecemos apenas produtos personalizados pela nossa equipe de bruxos artesãos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.">
-    <title>Vassourax - Vacssouras mágicas</title>
+    <title>Vassourax - Vassouras mágicas</title>
     <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -36,7 +36,9 @@
                 <a href="#">Escolha a sua</a>
             </div>
 
-            <img src="assets/img/fotos/introducao.jpg" alt="Vassoura mágica preta">
+            <div>
+                <img src="assets/img/fotos/introducao.jpg" alt="Vassoura mágica preta">
+            </div>
         </div>
     </main>
 
