Organizei a estrutura do projeto, adicionando componentes, dividindo o css, etc

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
 
             <nav aria-label="primaria">
-                <ul class="header-menu">
+                <ul class="header-menu font-1-m cor-0">
                     <li><a href="/vassouras.html">Vassouras</a></li>
                     <li><a href="/seguros.html">Seguros</a></li>
                     <li><a href="/contato.html">Contato</a></li>
@@ -31,9 +31,9 @@
     <main class="introducao-bg">
         <div class="introducao">
             <div class="introducao-conteudo">
-                <h1>Vassouras sob medida<span>.</span></h1>
-                <p>Oferecemos apenas produtos personalizados pela nossa equipe, feitos à mão e com muito apreço aos detalhes.</p>
-                <a href="#">Escolha a sua</a>
+                <h1 class="font-1-xxl cor-0">Vassouras sob medida<span class="cor-p1">.</span></h1>
+                <p class="font-2-l cor-5">Oferecemos apenas produtos personalizados pela nossa equipe, feitos à mão e com muito apreço aos detalhes.</p>
+                <a class="botao" href="#">Escolha a sua</a>
             </div>
 
             <div>
