Adicionei a lista de vassouras

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class="header container">
             <a href="./">
                 <img src="assets/img/vassourax.svg" alt="Vassourax">
             </a>
@@ -29,10 +29,10 @@
     </header>
 
     <main class="introducao-bg">
-        <div class="introducao">
+        <div class="introducao container">
             <div class="introducao-conteudo">
                 <h1 class="font-1-xxl cor-0">Vassouras sob medida<span class="cor-p1">.</span></h1>
-                <p class="font-2-l cor-5">Oferecemos apenas produtos personalizados pela nossa equipe, feitos à mão e com muito apreço aos detalhes.</p>
+                <p class="font-2-l cor-5">Oferecemos produtos personalizados pela nossa equipe de bruxos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.</p>
                 <a class="botao" href="#">Escolha a sua</a>
             </div>
 
@@ -41,6 +41,35 @@
             </div>
         </div>
     </main>
+
+    <article class="vassouras-lista">
+        <h2 class="container font-1-xxl">Deixe de ser trouxa <br> e escolha a sua<span class="cor-p1">.</span></h2>
+        <ul>
+            <li>
+                <a href="/assets/bicicletas/firebolt.html">
+                    <img src="/assets/img/vassouras/firebolt-v.jpg" alt="Vassoura preta">
+                    <h3 class="font-1-xl">Firebolt Black</h3>
+                    <span class="font-2-m cor-8">R$ 4999</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="/assets/bicicletas/thunderbolt.html">
+                    <img src="/assets/img/vassouras/thunderbolt-v.jpg" alt="Vassoura preta">
+                    <h3 class="font-1-xl">Thunderbolt Supreme</h3>
+                    <span class="font-2-m cor-8">R$ 2499</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="/assets/bicicletas/red-nimbus.html">
+                    <img src="/assets/img/vassouras/red-nimbus-v.jpg" alt="Vassoura preta">
+                    <h3 class="font-1-xl">Red Nimbus</h3>
+                    <span class="font-2-m cor-8">R$ 3999</span>
+                </a>
+            </li>
+        </ul>
+    </article>
 
     <footer>
 
