--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
     </main>
 
     <article class="vassouras-lista">
-        <h2 class="container font-1-xxl">Deixe de ser trouxa <br> e escolha a sua<span class="cor-p1">.</span></h2>
+        <div class="container bloco">
+            <h2 class="font-1-xxl">Deixe de ser trouxa e escolha a sua<span class="cor-p1">.</span></h2>
+        </div>
         <ul>
             <li>
-                <a href="/assets/bicicletas/firebolt.html">
+                <a href="/assets/vassouras/firebolt.html">
                     <img src="/assets/img/vassouras/firebolt-v.jpg" alt="Vassoura preta">
                     <h3 class="font-1-xl">Firebolt Black</h3>
                     <span class="font-2-m cor-8">R$ 4999</span>
@@ -54,7 +56,7 @@
             </li>
 
             <li>
-                <a href="/assets/bicicletas/thunderbolt.html">
+                <a href="/assets/vassouras/thunderbolt.html">
                     <img src="/assets/img/vassouras/thunderbolt-v.jpg" alt="Vassoura preta">
                     <h3 class="font-1-xl">Thunderbolt Supreme</h3>
                     <span class="font-2-m cor-8">R$ 2499</span>
@@ -62,13 +64,41 @@
             </li>
 
             <li>
-                <a href="/assets/bicicletas/red-nimbus.html">
+                <a href="/assets/vassouras/red-nimbus.html">
                     <img src="/assets/img/vassouras/red-nimbus-v.jpg" alt="Vassoura preta">
                     <h3 class="font-1-xl">Red Nimbus</h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
                 </a>
             </li>
         </ul>
+    </article>
+
+    <article class="magia-bg">
+        <div class="magia container">
+            <div class="magia-conteudo">
+                <span class="font-2-l-b cor-5">Magia avançada</span>
+                <h2 class="font-1-xxl cor-0">Você escolhe as <br> suas cores e <br> componentes<span class="cor-p1">.</span></h2>
+                <p class="font-2-l cor-5">Cada Vassourax é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia no seu vôo. Você pode também personalizar completamente as suas cores.</p>
+                <a class="link" href="vassouras.html">Escolha um modelo</a>
+
+                <div class="magia-vantagens">
+                    <div>
+                        <img src="/assets/img/icones/magica.svg" alt="">
+                        <h3 class="font-1-m cor-0">Motor Elétrico</h3>
+                        <p class="font-2-s cor-5">Toda Vassourax é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                    </div>
+                    <div>
+                        <img src="/assets/img/icones/rastreador.svg" alt="">
+                        <h3 class="font-1-m cor-0">Rastreador</h3>
+                        <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="magia-imagem">
+                <img src="/assets/img/fotos/magia.jpg" alt="">
+            </div>
+        </div>
     </article>
 
     <footer>
