Fiz alguns ajustes finos no projeto

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                 <div class="magia-vantagens">
                     <div>
                         <img src="/assets/img/icones/magica.svg" alt="">
-                        <h3 class="font-1-m cor-0">Motor Elétrico</h3>
-                        <p class="font-2-s cor-5">Toda Vassourax é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                        <h3 class="font-1-m cor-0">Motor Enfeitiçado</h3>
+                        <p class="font-2-s cor-5">Toda Vassourax é equipada com um feitiço propulsor que pode durar até 120h. Além disso, a energia é recarregada de acordo com a velocidade do vôo.</p>
                     </div>
                     <div>
                         <img src="/assets/img/icones/rastreador.svg" alt="">
-                        <h3 class="font-1-m cor-0">Rastreador</h3>
-                        <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                        <h3 class="font-1-m cor-0">Sigilo Bruxo</h3>
+                        <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua identidade e, por isso, adicionamos um sistema anti-trouxas para garantir o seu sossego.</p>
                     </div>
                 </div>
             </div>
