Adicionaei a seção de Parceiros

--- a/index.html
+++ b/index.html
@@ -101,6 +101,21 @@
         </div>
     </article>
 
+    <section class="parceiros" aria-label="Nossos parceiros">
+        <h2 class="container font-1-xxl">Nossos parceiros<span class="cor-p1">.</span></h2>
+
+        <ul>
+            <li><img src="/assets/img/parceiros/hogwarts.svg" alt="Hogwarts" title="Hogwarts"></li>
+            <li><img src="/assets/img/parceiros/bank-of-gringotts.svg" alt="Banco de Gringotts" title="Banco de Gringotts"></li>
+            <li><img src="/assets/img/parceiros/ministry-of-magic.svg" alt="Ministério da Magia" title="Ministério da Magia"></li>
+            <li><img src="/assets/img/parceiros/daily-prophet.svg" alt="O Profeta Diário" title="O Profeta Diário"></li>
+            <li><img src="/assets/img/parceiros/weasleys-wizard-wheezes.svg" alt="Gemialidades Weasley" title="Gemialidades Weasley"></li>
+            <li><img src="/assets/img/parceiros/magicoogle.svg" alt="Magicoogle" title="Magicoogle"></li>
+            <li><img src="/assets/img/parceiros/thestral.svg" alt="Thestral" title="Thestral"></li>
+            <li><img src="/assets/img/parceiros/choco-frogs.svg" alt="Sapos de Chocolates" title="Sapos de Chocolates"></li>
+        </ul>
+    </section>
+
     <footer>
 
     </footer>
