Adicionei a seção Depoimento

--- a/index.html
+++ b/index.html
@@ -116,6 +116,20 @@
         </ul>
     </section>
 
+    <section class="depoimento" aria-label="Depoimento">
+        <div>
+            <img src="/assets/img/fotos/depoimento.jpg" alt="Fleur Delacour sorrindo e olhando para o alto">
+        </div>
+
+        <div class="depoimento-conteudo">
+            <blockquote class="font-1-xl cor-p5">
+                <p>Voar sempre foi o meu sonho e o que o pessoal da Vassourax fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.
+                </p>
+            </blockquote>
+            <span class="font-1-m-b cor-p4">Fleur Delacour</span>
+        </div>
+    </section>
+
     <footer>
 
     </footer>
