--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="magia container">
             <div class="magia-conteudo">
                 <span class="font-2-l-b cor-5">Magia avançada</span>
-                <h2 class="font-1-xxl cor-0">Você escolhe as <br> suas cores e <br> componentes<span class="cor-p1">.</span></h2>
+                <h2 class="font-1-xxl cor-0">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
                 <p class="font-2-l cor-5">Cada Vassourax é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia no seu vôo. Você pode também personalizar completamente as suas cores.</p>
                 <a class="link" href="vassouras.html">Escolha um modelo</a>
 
@@ -130,8 +130,38 @@
         </div>
     </section>
 
-    <footer>
+    <article class="seguros-bg">
+        <div class="seguros">
+            <h2 class="font-1-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
+            <div class="seguros-item">
+                <h3 class="font-1-xl cor-6">PRATA</h3>
+                <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
+                <ul class="font-2-m cor-0">
+                    <li>Duas trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 8h - 18h</li>
+                    <li>Cobertura no mundo dos trouxas</li>
+                </ul>
+                <a class="botao secundario" href="/orcamento.html">Increva-se</a>
+            </div>
 
+            <div class="seguros-item">
+                <h3 class="font-1-xl cor-p1">OURO</h3>
+                <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
+                <ul class="font-2-m cor-0">
+                    <li>Cinco trocas por ano</li>
+                    <li>Assistência especial</li>
+                    <li>Suporte 24h</li>
+                    <li>Cobertura no mundo dos trouxas</li>
+                    <li>Descontos em parceiros</li>
+                    <li>Acesso ao Clube Vassourax</li>
+                </ul>
+                <a class="botao" href="/orcamento.html">Increva-se</a>
+            </div>
+        </div>
+    </article>
+
+    <footer>
     </footer>
 </body>
 
