--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </section>
 
     <article class="seguros-bg">
-        <div class="seguros">
+        <div class="seguros container">
             <h2 class="font-1-xxl cor-0">Seguros<span class="cor-p1">.</span></h2>
             <div class="seguros-item">
                 <h3 class="font-1-xl cor-6">PRATA</h3>
