--- a/vassouras.html
+++ b/vassouras.html
@@ -13,14 +13,14 @@
 
 <body>
     <header class="header-bg">
-        <div class="header">
+        <div class="header container">
             <a href="./">
                 <img src="assets/img/vassourax.svg" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
-                    <li><a class="link-ativo" href="/vassouras.html">Vassouras</a></li>
+                    <li><a href="/vassouras.html">Vassouras</a></li>
                     <li><a href="/seguros.html">Seguros</a></li>
                     <li><a href="/contato.html">Contato</a></li>
                 </ul>
@@ -28,14 +28,41 @@
         </div>
     </header>
 
-    <main class="vassouras-bg">
-        <div class="vassouras">
 
+
+    <footer class="footer-bg">
+        <div class="footer container">
+            <img src="assets/img/vassourax.svg" alt="Vassourax">
+
+            <div class="footer-contato">
+                <h3 class="font-2-l-b cor-0">Contato</h3>
+                <ul class="font-2-m cor-5">
+                    <li><a href="tel:+4420939343934">+44 20 93934-3934</a></li>
+                    <li><a href="mailto:contato@vassourax.com">vassourax@becodiagonal.com</a></li>
+                    <li>Londres, Inglaterra. Atrás de um pub chamado Caldeirão Furado.</li>
+                </ul>
+
+                <div class="footer-redes">
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/instagram.svg" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/facebook.svg" alt="Facebook"></a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/youtube.svg" alt="YouTube"></a>
+                </div>
+            </div>
+
+            <div class="footer-informacoes">
+                <h3 class="font-2-l-b cor-0">Informações</h3>
+                <nav>
+                    <ul class="font-1-m cor-5">
+                        <li><a href="/vassouras.html">Vassouras</a></li>
+                        <li><a href="/seguros.html">Seguros</a></li>
+                        <li><a href="/contato.html">Contato</a></li>
+                        <li><a href="/termos.html">Termos e Condições</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
         </div>
-    </main>
-
-    <footer>
-
     </footer>
 </body>
 
