--- a/vassouras.html
+++ b/vassouras.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Oferecemos apenas produtos personalizados pela nossa equipe de bruxos artesãos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.">
-    <title>Vassourax - Vassouras mágicas</title>
+    <meta name="description" content="Termos e Condições de Uso do Site.">
+    <title>Vassouras | Vassourax</title>
     <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body id="vassouras">
     <header class="header-bg">
         <div class="header container">
             <a href="./">
@@ -28,7 +28,125 @@
         </div>
     </header>
 
+    <main>
+        <div class="titulo-bg">
+            <div class="titulo container">
+                <p class="font-2-l-b cor-5">Escolha a melhor para você</p>
+                <h1 class="font-1-xxl cor-0">Nossas vassouras<span class="cor-p1">.</span></h1>
+            </div>
+        </div>
 
+        <div class="vassouras container">
+            <div class="vassouras-imagem">
+                <img src="/assets/img/vassouras/firebolt-home.jpg" alt="Vassoura preta">
+                <span class="font-2-m cor-0">R$ 14999</span>
+            </div>
+
+            <div class="vassouras-conteudo">
+                <h2 class="font-1-xl">Firebolt Black</h2>
+
+                <p class="font-2-s cor-8">A Firebolt Black é o nosso modelo mais recente e top de linha. Ela vem equipada com os melhores acessórios, o que garante maior velocidade e aerodinâmica.</p>
+
+                <ul class="font-1-m cor-8">
+                    <li>
+                        <img src="/assets/img/icones/magica.svg" alt="">
+                        Garantia de 10 anos
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/rastreador.svg" alt="">
+                        Antirrastreio
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/velocidade.svg" alt="">
+                        240 Km/h em 10 segundos
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/cerdas.svg" alt="">
+                        Resistência de diamante
+                    </li>
+                </ul>
+
+                <a href="/assets/vassouras/firebolt.html" class="botao seta">Mais sobre</a>
+            </div>
+        </div>
+
+        <div class="vassouras-bg">
+            <div class="vassouras container">
+                <div class="vassouras-imagem">
+                    <img src="/assets/img/vassouras/thunderbolt-home.jpg" alt="Vassoura preta">
+                    <span class="font-2-m cor-0">R$ 5499</span>
+                </div>
+                <div class="vassouras-conteudo">
+                    <h2 class="font-1-xl cor-0">Thunderbolt Supreme</h2>
+
+                    <p class="font-2-s cor-5">A Thunderbolt é o nosso modelo custo-benefício. Perfeita para ir trabalhar ou viajar a negócios. Possui grande autonomia de vôo e resistência aos ventos.</p>
+
+                    <ul class="font-1-m cor-5">
+                        <li>
+                            <img src="/assets/img/icones/magica.svg" alt="">
+                            Garantia de 5 anos
+                        </li>
+
+                        <li>
+                            <img src="/assets/img/icones/rastreador.svg" alt="">
+                            Acompanha um Feitiço de Desilusão
+                        </li>
+
+                        <li>
+                            <img src="/assets/img/icones/velocidade.svg" alt="">
+                            80 Km/h
+                        </li>
+
+                        <li>
+                            <img src="/assets/img/icones/cerdas.svg" alt="">
+                            Penas de Hipogrifo
+                        </li>
+                    </ul>
+
+                    <a href="/assets/vassouras/thunderbolt.html" class="botao seta">Mais sobre</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="vassouras container">
+            <div class="vassouras-imagem">
+                <img src="/assets/img/vassouras/red-nimbus-home.jpg" alt="Vassoura preta">
+                <span class="font-2-m cor-0">R$ 3999</span>
+            </div>
+            <div class="vassouras-conteudo">
+                <h2 class="font-1-xl">Red Nimbus</h2>
+
+                <p class="font-2-s cor-8">A Red Nimbus é o modelo campeão de vendas. Uma vassoura para toda família, com foco em segurança, conforto e flexibilidade. Acompanha alarme antirroubo.</p>
+
+                <ul class="font-1-m cor-8">
+                    <li>
+                        <img src="/assets/img/icones/magica.svg" alt="">
+                        Garantia de 5 anos
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/rastreador.svg" alt="">
+                        Acompanha um Feitiço de Desilusão
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/velocidade.svg" alt="">
+                        70 Km/h
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/cerdas.svg" alt="">
+                        Cabo de Mogno
+                    </li>
+                </ul>
+
+                <a href="/assets/vassouras/red-nimbus.html" class="botao seta">Mais sobre</a>
+            </div>
+        </div>
+    </main>
 
     <footer class="footer-bg">
         <div class="footer container">
