--- a/assets/seguros.html
+++ b/assets/seguros.html
@@ -7,22 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Termos e Condições de Uso do Site.">
     <title>Seguros | Vassourax</title>
-    <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body id="seguros">
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="assets/img/vassourax.svg" alt="Vassourax">
+                <img src="/assets/img/vassourax.svg" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
-                    <li><a href="/vassouras.html">Vassouras</a></li>
-                    <li><a href="/seguros.html">Seguros</a></li>
-                    <li><a href="/contato.html">Contato</a></li>
+                    <li><a href="/assets/vassouras.html">Vassouras</a></li>
+                    <li><a href="/assets/seguros.html">Seguros</a></li>
+                    <li><a href="/assets/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -173,10 +173,10 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="/vassouras.html">Vassouras</a></li>
-                        <li><a href="/seguros.html">Seguros</a></li>
-                        <li><a href="/contato.html">Contato</a></li>
-                        <li><a href="/termos.html">Termos e Condições</a></li>
+                        <li><a href="/assets/vassouras.html">Vassouras</a></li>
+                        <li><a href="/assets/seguros.html">Seguros</a></li>
+                        <li><a href="/assets/contato.html">Contato</a></li>
+                        <li><a href="/assets/termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
