--- a/assets/vassouras/firebolt.html
+++ b/assets/vassouras/firebolt.html
@@ -5,32 +5,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Oferecemos apenas produtos personalizados pela nossa equipe de bruxos artesãos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.">
-    <title>Vassourax - Vassouras mágicas</title>
-    <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="Termos e Condições de Uso do Site.">
+    <title>Firebolt Black | Vassourax</title>
+    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
-<body>
+<body id="vassoura">
     <header class="header-bg">
         <div class="header container">
-            <a href="./">
-                <img src="assets/img/vassourax.svg" alt="Vassourax">
+            <a href="/index.html">
+                <img src="/assets/img/vassourax.svg" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
-                    <li><a href="/vassouras.html">Vassouras</a></li>
-                    <li><a href="/seguros.html">Seguros</a></li>
-                    <li><a href="/contato.html">Contato</a></li>
+                    <li><a href="/assets/vassouras.html">Vassouras</a></li>
+                    <li><a href="/assets/seguros.html">Seguros</a></li>
+                    <li><a href="/assets/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
+    <main class="titulo-bg">
+        <div>
+            <div class="titulo container">
+                <p class="font-2-xl cor-5">R$ 4999</p>
+                <h1 class="font-1-xxl cor-0">Firebolt Black<span class="cor-p1">.</span></h1>
+            </div>
+        </div>
+
+        <div class="vassoura container">
+            <div class="vassoura-imagens">
+                <img src="/assets/img/vassouras/firebolt/firebolt1.jpg" alt="">
+                <img src="/assets/img/vassouras/firebolt/firebolt2.jpg" alt="">
+                <img src="/assets/img/vassouras/firebolt/firebolt3.jpg" alt="">
+            </div>
+
+            <div class="vassoura-conteudo">
+                <p class="font-2-l cor-5">A Firebolt Black é o nosso modelo mais recente. Ela vem equipada com os melhores acessórios, o que garante maior velocidade e aerodinâmica.</p>
+                <div class="vassoura-comprar">
+                    <a href="/assets/orcamento.html" class="botao">Comprar agora</a>
+                    <span class="font-1-xs cor-6">
+                        <img src="/assets/img/icones/entrega.svg" alt="">
+                        Entrega em 5 dias
+                    </span>
+
+                    <span class="font-1-xs cor-6">
+                        <img src="/assets/img/icones/estoque.svg" alt="">
+                        18 em estoque
+                    </span>
+                </div>
+
+                <h2 class="font1-xs cor-0">Informações</h2>
+                <ul class="vassoura-informacoes">
+                    <li>
+                        <img src="/assets/img/icones/magica.svg" alt="">
+                        <h3 class="font-1-m cor-0">Garantia de 10 anos</h3>
+                        <p class="font-2-xs cor-5">A garantia leva em consideração um feitiço inquebrável de freagem.</p>
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/velocidade.svg" alt="">
+                        <h3 class="font-1-m cor-0">240 Km/h em 10 segundos</h3>
+                        <p class="font-2-xs cor-5">A mais rápida vassoura disponível hoje no mercado.</p>
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/rastreador.svg" alt="">
+                        <h3 class="font-1-m cor-0">Feitiço de Desilusão</h3>
+                        <p class="font-2-xs cor-5">Bruxos podem viajar de vassoura sem ser vistos pelos trouxas.</p>
+                    </li>
+
+                    <li>
+                        <img src="/assets/img/icones/cerdas.svg" alt="">
+                        <h3 class="font-1-m cor-0">Resistência de Diamante</h3>
+                        <p class="font-2-xs cor-5">Cabo aerodinâmico, superfino de freixo, acabamento ultrarresistente.</p>
+                    </li>
+                </ul>
+
+                <h2 class="font1-xs cor-0">Ficha técnica</h2>
+                <ul class="vassoura-ficha font-2-s cor-4">
+                    <li>Peso <span>9kg</span></li>
+                    <li>Altura <span>60 cm</span></li>
+                    <li>Largura <span>120 cm</span></li>
+                    <li>Profundidade <span>10 cm</span></li>
+                    <li>Velocidade <span>16</span></li>
+                    <li>Cerdas <span>29</span></li>
+                </ul>
+            </div>
+        </div>
+    </main>
+
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="assets/img/vassourax.svg" alt="Vassourax">
+            <img src="../img/vassourax.svg" alt="Vassourax">
 
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
@@ -41,9 +111,9 @@
                 </ul>
 
                 <div class="footer-redes">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/youtube.svg" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="../img/redes/instagram.svg" alt="Instagram"></a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="../img/redes/facebook.svg" alt="Facebook"></a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="../img/redes/youtube.svg" alt="YouTube"></a>
                 </div>
             </div>
 
@@ -51,10 +121,10 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="/vassouras.html">Vassouras</a></li>
-                        <li><a href="/seguros.html">Seguros</a></li>
-                        <li><a href="/contato.html">Contato</a></li>
-                        <li><a href="/termos.html">Termos e Condições</a></li>
+                        <li><a href="/assets/vassouras.html">Vassouras</a></li>
+                        <li><a href="/assets/seguros.html">Seguros</a></li>
+                        <li><a href="/assets/contato.html">Contato</a></li>
+                        <li><a href="/assets/termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
