--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./">
-                <img src="assets/img/vassourax.svg" alt="Vassourax">
+                <img src="/assets/img/vassourax.svg" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
-                    <li><a href="/vassouras.html">Vassouras</a></li>
-                    <li><a href="/seguros.html">Seguros</a></li>
-                    <li><a href="/contato.html">Contato</a></li>
+                    <li><a href="./assets/vassouras.html">Vassouras</a></li>
+                    <li><a href="./assets/seguros.html">Seguros</a></li>
+                    <li><a href="./assets/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -184,10 +184,10 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="/vassouras.html">Vassouras</a></li>
-                        <li><a href="/seguros.html">Seguros</a></li>
-                        <li><a href="/contato.html">Contato</a></li>
-                        <li><a href="/termos.html">Termos e Condições</a></li>
+                        <li><a href="./assets/vassouras.html">Vassouras</a></li>
+                        <li><a href="./assets/seguros.html">Seguros</a></li>
+                        <li><a href="./assets/contato.html">Contato</a></li>
+                        <li><a href="./assets/termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
