Adicionei a página de contato

--- a/assets/vassouras.html
+++ b/assets/vassouras.html
@@ -14,7 +14,7 @@
 <body id="vassouras">
     <header class="header-bg">
         <div class="header container">
-            <a href="./">
+            <a href="/index.html">
                 <img src="/assets/img/vassourax.svg" alt="Vassourax">
             </a>
 
@@ -150,7 +150,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="assets/img/vassourax.svg" alt="Vassourax">
+            <img src="/assets/img/vassourax.svg" alt="Vassourax">
 
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
