--- a/assets/vassouras/firebolt.html
+++ b/assets/vassouras/firebolt.html
@@ -31,7 +31,7 @@
     <main class="titulo-bg">
         <div>
             <div class="titulo container">
-                <p class="font-2-xl cor-5">R$ 4999</p>
+                <p class="font-2-xl cor-5">R$ 14999</p>
                 <h1 class="font-1-xxl cor-0">Firebolt Black<span class="cor-p1">.</span></h1>
             </div>
         </div>
@@ -97,6 +97,44 @@
             </div>
         </div>
     </main>
+
+    <article class="vassouras-lista">
+        <div class="container bloco">
+            <h2 class="font-1-xxl">Deixe de ser trouxa e escolha a sua<span class="cor-p1">.</span></h2>
+        </div>
+
+        <ul>
+            <li>
+                <a href="/assets/vassouras/thunderbolt.html">
+                    <img src="/assets/img/vassouras/thunderbolt-home.jpg" alt="Vassoura preta">
+                    <h3 class="font-1-xl">Thunderbolt Supreme</h3>
+                    <span class="font-2-m cor-8">R$ 5499</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="/assets/vassouras/red-nimbus.html">
+                    <img src="/assets/img/vassouras/red-nimbus-home.jpg" alt="Vassoura preta">
+                    <h3 class="font-1-xl">Red Nimbus</h3>
+                    <span class="font-2-m cor-8">R$ 3999</span>
+                </a>
+            </li>
+        </ul>
+    </article>
+
+    <article class="seguro-bg">
+        <div class="seguro container">
+            <div class="seguro-imagem">
+                <img src="/assets/img/fotos/seguros.jpg" alt="Cedrico Diggory, aluno da Grifinória">
+            </div>
+
+            <div class="seguro-conteudo">
+                <h2 class="font-1-xxl cor-0">Voe tranquilo com o nosso <span class="cor-p1">seguro</span> Diggory.</h2>
+                <p class="font-2-l cor-5">Inscreva-se em um dos planos do nosso seguro Diggory e aproveite diversos benefícios.</p>
+                <a href="/assets/seguros.html" class="botao">Conheça mais</a>
+            </div>
+        </div>
+    </article>
 
     <footer class="footer-bg">
         <div class="footer container">
