--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="introducao-conteudo">
                 <h1 class="font-1-xxl cor-0">Vassouras sob medida<span class="cor-p1">.</span></h1>
                 <p class="font-2-l cor-5">Oferecemos produtos personalizados pela nossa equipe de bruxos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.</p>
-                <a class="botao" href="#">Escolha a sua</a>
+                <a class="botao" href="/assets/vassouras.html">Escolha a sua</a>
             </div>
 
             <div>
@@ -79,7 +79,7 @@
                 <span class="font-2-l-b cor-5">Magia avançada</span>
                 <h2 class="font-1-xxl cor-0">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
                 <p class="font-2-l cor-5">Cada Vassourax é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia no seu vôo. Você pode também personalizar completamente as suas cores.</p>
-                <a class="link" href="vassouras.html">Escolha um modelo</a>
+                <a class="link" href="/assets/vassouras.html">Escolha um modelo</a>
 
                 <div class="magia-vantagens">
                     <div>
