Corrigi alguns erros

--- a/assets/contato.html
+++ b/assets/contato.html
@@ -14,7 +14,7 @@
 <body id="contato">
     <header class="header-bg">
         <div class="header container">
-            <a href="./">
+            <a href="/index.html">
                 <img src="/assets/img/vassourax.svg" alt="Vassourax">
             </a>
 
