--- a/assets/seguros.html
+++ b/assets/seguros.html
@@ -14,7 +14,7 @@
 <body id="seguros">
     <header class="header-bg">
         <div class="header container">
-            <a href="./">
+            <a href="/index.html">
                 <img src="/assets/img/vassourax.svg" alt="Vassourax">
             </a>
 
@@ -73,13 +73,13 @@
                 <li>
                     <img src="/assets/img/icones/magica.svg" alt="">
                     <h3 class="font-1-l cor-0">Reparo Mágico</h3>
-                    <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
+                    <p class="font-2-s cor-5">Garantimos o reparo completo da sua vassoura em caso de falhas. Estamos aqui caso ocorra.</p>
                 </li>
 
                 <li>
                     <img src="/assets/img/icones/cerdas.svg" alt="">
-                    <h3 class="font-1-l cor-0">Reparo de Quadro</h3>
-                    <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+                    <h3 class="font-1-l cor-0">Reparo de Cabo</h3>
+                    <p class="font-2-s cor-5">Nossos cabos são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
                 </li>
 
                 <li>
@@ -91,7 +91,7 @@
                 <li>
                     <img src="/assets/img/icones/recuperacao.svg" alt="">
                     <h3 class="font-1-l cor-0">Recuperação</h3>
-                    <p class="font-2-s cor-5">Recuperamos VassouraX roubadas sem custo adicional para o dono. Se não conseguirmos, damos uma nova para você.</p>
+                    <p class="font-2-s cor-5">Recuperamos Vassourax roubadas sem custo adicional para o dono. Se não conseguirmos, damos uma nova para você.</p>
                 </li>
 
                 <li>
@@ -152,7 +152,7 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="assets/img/vassourax.svg" alt="Vassourax">
+            <img src="/assets/img/vassourax.svg" alt="Vassourax">
 
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
