Adicionei a página de orçamento

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <li>Suporte 8h - 18h</li>
                     <li>Cobertura no mundo dos trouxas</li>
                 </ul>
-                <a class="botao secundario" href="/orcamento.html">Increva-se</a>
+                <a class="botao secundario" href="/assets/orcamento.html">Increva-se</a>
             </div>
 
             <div class="seguros-item">
@@ -156,7 +156,7 @@
                     <li>Descontos em parceiros</li>
                     <li>Acesso ao Clube Vassourax</li>
                 </ul>
-                <a class="botao" href="/orcamento.html">Increva-se</a>
+                <a class="botao" href="/assets/orcamento.html">Increva-se</a>
             </div>
         </div>
     </article>
