Realizei ajustes finais no HTML e CSS

--- a/assets/contato.html
+++ b/assets/contato.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
+
 <body id="contato">
     <header class="header-bg">
         <div class="header container">
@@ -40,69 +41,68 @@
             <section class="contato-dados" aria-label="Endereço">
                 <h2 class="font-1-m cor-0">Loja Online</h2>
                 <div class="contato-endereco font-2-s cor-4">
-                    <p>Rua Lore Ipsum, 99 - Pituba </p>
-                    <p>Salvador - BA</p>
-                    <p>Brasil - Terra - Via Láctea</p>
+                    <p>Beco Diagonal</p>
+                    <p>Londres, UK</p>
+                    <p>Atrás de um pub chamado Caldeirão Furado.</p>
                 </div>
-
                 <address class="contato-meios font-2-s cor-4">
-                    <a href="mailto:vassourrax@becodiagonal.com">vassourrax@becodiagonal.com</a>
-                    <a href="tel:4420939343934">+44 20 93934-3934</a>
+                    <a href="mailto:contato@vassourax.com">contato@vassourax.com</a>
+                    <a href="tel:+4420939343934">+44 20 93934-3934</a>
                 </address>
-
                 <div class="contato-redes">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/instagram-p.svg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/facebook-p.svg" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/youtube-p.svg" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/instagram-p.svg" alt="Instagram">
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/facebook-p.svg" alt="Facebook">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/youtube-p.svg" alt="Youtube">
+                    </a>
                 </div>
             </section>
-
             <section class="contato-formulario" aria-label="Formulário">
                 <form class="form" action="/assets/contato.html">
                     <div>
-                        <label for="name">Nome</label>
-                        <input type="text" name="name" id="name" placeholder="Seu nome">
+                        <label for="nome">Nome</label>
+                        <input type="text" id="nome" name="nome" placeholder="Seu nome">
                     </div>
-
                     <div>
-                        <label for="tel">Telefone</label>
-                        <input type="tel" name="tel" id="tel" placeholder="(XX) 9XXXX-XXXX">
+                        <label for="telefone">Telefone</label>
+                        <input type="text" id="telefone" name="telefone" placeholder="(71) 99999-9999">
                     </div>
-
                     <div class="col-2">
-                        <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email" placeholder="seuemail@email.com">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="contato@email.com">
                     </div>
-
                     <div class="col-2">
                         <label for="mensagem">Mensagem</label>
-                        <textarea name="mensagem" id="mensagem" cols="30" rows="5" placeholder="O que você precisa?"></textarea>
+                        <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
                     </div>
-
-                    <button type="submit" class="botao col-2">Enviar Mensagem</button>
-
+                    <button class="botao col-2">Enviar Mensagem</button>
                 </form>
             </section>
         </div>
     </main>
 
     <article class="lojas container">
-        <h2 class="font-1-xxl">Loja Física<span class="cor-p1">.</span></h2>
+        <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
 
         <div class="lojas-item">
-            <img src="/assets/img/localizacao/mapa-londres.jpg" alt="Mapa marcando o endereço em Londres - Inglaterra, Atrás de um pub chamado Caldeirão Furado">
+            <img src="/assets/img/localizacao/mapa-londres.jpg" alt="mapa marcando o endereço em Beco Diagonal, atrás de um pub chamado Caldeirão Furado, em Londres - UK">
 
             <div class="lojas-conteudo">
                 <h3 class="font-1-xl">Londres</h3>
                 <div class="lojas-dados font-2-s cor-8">
-                    <p>Londres, Inglaterra.</p>
+                    <p>Beco Diagonal</p>
                     <p>Atrás de um pub chamado Caldeirão Furado.</p>
                 </div>
+
                 <div class="lojas-dados font-2-s cor-8">
-                    <a href="mailto:vassourrax@becodiagonal.com">vassourrax@becodiagonal.com</a>
-                    <a href="tel:4420939343934">+44 20 93934-3934</a>
+                    <a href="mailto:contato@vassourax.com">contato@vassourax.com</a>
+                    <a href="tel:+4420939343934">+44 20 93934-3934</a>
                 </div>
-                <p class="lojas-tempo font-1-s"><img src="/assets/img/icones/horario.svg" alt="">8h - 18h, de seg a sex</p>
+                <p class="lojas-tempo font-1-s"><img src="/assets/img/icones/horario.svg" alt="">08-18h de seg à dom</p>
             </div>
         </div>
     </article>
@@ -110,35 +110,38 @@
     <footer class="footer-bg">
         <div class="footer container">
             <img src="/assets/img/vassourax.svg" alt="Vassourax">
-
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
                     <li><a href="tel:+4420939343934">+44 20 93934-3934</a></li>
-                    <li><a href="mailto:contato@vassourax.com">vassourax@becodiagonal.com</a></li>
-                    <li>Londres, Inglaterra. Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li><a href="mailto:contato@vassourax.com">contato@vassourax.com</a></li>
+                    <li>Beco Diagonal, Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li>Londres, UK</li>
                 </ul>
-
                 <div class="footer-redes">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/youtube.svg" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/youtube.svg" alt="Youtube">
+                    </a>
                 </div>
             </div>
-
             <div class="footer-informacoes">
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="/assets/vassouras.html">Vassouras</a></li>
+                        <li><a href="/assets/vassouras.html">vassouras</a></li>
                         <li><a href="/assets/seguros.html">Seguros</a></li>
                         <li><a href="/assets/contato.html">Contato</a></li>
                         <li><a href="/assets/termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
-
-            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
+            <p class="footer-copy font-2-m cor-6">vassourax © Alguns direitos reservados.</p>
         </div>
     </footer>
 </body>
