--- a/assets/seguros.html
+++ b/assets/seguros.html
@@ -46,7 +46,7 @@
                     <li>Suporte 8h - 18h</li>
                     <li>Cobertura no mundo dos trouxas</li>
                 </ul>
-                <a class="botao secundario" href="/orcamento.html">Increva-se</a>
+                <a class="botao secundario" href="/assets/orcamento.html">Increva-se</a>
             </div>
 
             <div class="seguros-item">
@@ -60,7 +60,7 @@
                     <li>Descontos em parceiros</li>
                     <li>Acesso ao Clube Vassourax</li>
                 </ul>
-                <a class="botao" href="/orcamento.html">Increva-se</a>
+                <a class="botao" href="/assets/orcamento.html">Increva-se</a>
             </div>
         </div>
     </main>
