--- a/assets/seguros.html
+++ b/assets/seguros.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Termos e Condições de Uso do Site.">
     <title>Seguros | Vassourax</title>
     <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -15,7 +16,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="/index.html">
-                <img src="/assets/img/vassourax.svg" alt="Vassourax">
+                <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
@@ -71,37 +72,37 @@
 
             <ul>
                 <li>
-                    <img src="/assets/img/icones/magica.svg" alt="">
+                    <img src="/assets/img/icones/magica.svg" width="32" height="32" alt="">
                     <h3 class="font-1-l cor-0">Reparo Mágico</h3>
                     <p class="font-2-s cor-5">Garantimos o reparo completo da sua vassoura em caso de falhas. Estamos aqui caso ocorra.</p>
                 </li>
 
                 <li>
-                    <img src="/assets/img/icones/cerdas.svg" alt="">
+                    <img src="/assets/img/icones/cerdas.svg" width="32" height="32" alt="">
                     <h3 class="font-1-l cor-0">Reparo de Cabo</h3>
                     <p class="font-2-s cor-5">Nossos cabos são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
                 </li>
 
                 <li>
-                    <img src="/assets/img/icones/sustentavel.svg" alt="">
+                    <img src="/assets/img/icones/sustentavel.svg" width="32" height="32" alt="">
                     <h3 class="font-1-l cor-0">Sustentável</h3>
                     <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
                 </li>
 
                 <li>
-                    <img src="/assets/img/icones/recuperacao.svg" alt="">
+                    <img src="/assets/img/icones/recuperacao.svg" width="32" height="32" alt="">
                     <h3 class="font-1-l cor-0">Recuperação</h3>
                     <p class="font-2-s cor-5">Recuperamos Vassourax roubadas sem custo adicional para o dono. Se não conseguirmos, damos uma nova para você.</p>
                 </li>
 
                 <li>
-                    <img src="/assets/img/icones/seguranca.svg" alt="">
+                    <img src="/assets/img/icones/seguranca.svg" width="24" height="24" alt="">
                     <h3 class="font-1-l cor-0">Segurança</h3>
                     <p class="font-2-s cor-5">O nosso seguro garante que todo reparo seja feito com peças genuínas e de alta qualidade. Confie na Vassourax.</p>
                 </li>
 
                 <li>
-                    <img src="/assets/img/icones/velocidade.svg" alt="">
+                    <img src="/assets/img/icones/velocidade.svg" width="32" height="32" alt="">
                     <h3 class="font-1-l cor-0">Rapidez</h3>
                     <p class="font-2-s cor-5">A sua Vassourax ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
                 </li>
@@ -152,20 +153,27 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="/assets/img/vassourax.svg" alt="Vassourax">
+            <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
 
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
                     <li><a href="tel:+4420939343934">+44 20 93934-3934</a></li>
-                    <li><a href="mailto:contato@vassourax.com">vassourax@becodiagonal.com</a></li>
-                    <li>Londres, Inglaterra. Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li><a href="mailto:vassourax@becodiagonal.comm">vassourax@becodiagonal.com</a></li>
+                    <li>Beco Diagonal, Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li>Londres, UK</li>
                 </ul>
 
                 <div class="footer-redes">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/youtube.svg" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/youtube.svg" width="32" height="32" alt="YouTube">
+                    </a>
                 </div>
             </div>
 
