--- a/assets/contato.html
+++ b/assets/contato.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Termos e Condições de Uso do Site.">
     <title>Contato | Vassourax</title>
     <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -16,7 +17,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="/index.html">
-                <img src="/assets/img/vassourax.svg" alt="Vassourax">
+                <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
@@ -51,13 +52,13 @@
                 </address>
                 <div class="contato-redes">
                     <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/redes/instagram-p.svg" alt="Instagram">
+                        <img src="/assets/img/redes/instagram-p.svg" width="32" height="32" alt="Instagram">
                     </a>
                     <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/redes/facebook-p.svg" alt="Facebook">
+                        <img src="/assets/img/redes/facebook-p.svg" width="32" height="32" alt="Facebook">
                     </a>
                     <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/redes/youtube-p.svg" alt="Youtube">
+                        <img src="/assets/img/redes/youtube-p.svg" width="32" height="32" alt="Youtube">
                     </a>
                 </div>
             </section>
@@ -86,62 +87,66 @@
     </main>
 
     <article class="lojas container">
-        <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
+        <h2 class="font-1-xxl">Lojas locais<span class="cor-p1">.</span></h2>
 
         <div class="lojas-item">
-            <img src="/assets/img/localizacao/mapa-londres.jpg" alt="mapa marcando o endereço em Beco Diagonal, atrás de um pub chamado Caldeirão Furado, em Londres - UK">
+            <img src="/assets/img/localizacao/mapa-londres.jpg" width="1312" height="520" alt="mapa marcando o endereço em Beco Diagonal, atrás de um pub chamado Caldeirão Furado, em Londres - UK">
 
             <div class="lojas-conteudo">
-                <h3 class="font-1-xl">Londres</h3>
+                <h3 class="font-1-xl">Londres, UK</h3>
                 <div class="lojas-dados font-2-s cor-8">
                     <p>Beco Diagonal</p>
                     <p>Atrás de um pub chamado Caldeirão Furado.</p>
                 </div>
 
                 <div class="lojas-dados font-2-s cor-8">
-                    <a href="mailto:contato@vassourax.com">contato@vassourax.com</a>
+                    <a href="mailto:vassourax@becodiagonal.com">vassourax@becodiagonal.com</a>
                     <a href="tel:+4420939343934">+44 20 93934-3934</a>
                 </div>
-                <p class="lojas-tempo font-1-s"><img src="/assets/img/icones/horario.svg" alt="">08-18h de seg à dom</p>
+                <p class="lojas-tempo font-1-s"><img src="/assets/img/icones/horario.svg" width="17" height="17" alt="">08-18h de seg à dom</p>
             </div>
         </div>
     </article>
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="/assets/img/vassourax.svg" alt="Vassourax">
+            <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
+
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
                     <li><a href="tel:+4420939343934">+44 20 93934-3934</a></li>
-                    <li><a href="mailto:contato@vassourax.com">contato@vassourax.com</a></li>
+                    <li><a href="mailto:vassourax@becodiagonal.comm">vassourax@becodiagonal.com</a></li>
                     <li>Beco Diagonal, Atrás de um pub chamado Caldeirão Furado.</li>
                     <li>Londres, UK</li>
                 </ul>
+
                 <div class="footer-redes">
                     <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/redes/instagram.svg" alt="Instagram">
+                        <img src="/assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
                     </a>
                     <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/redes/facebook.svg" alt="Facebook">
+                        <img src="/assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
                     </a>
                     <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/redes/youtube.svg" alt="Youtube">
+                        <img src="/assets/img/redes/youtube.svg" width="32" height="32" alt="YouTube">
                     </a>
                 </div>
             </div>
+
             <div class="footer-informacoes">
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="/assets/vassouras.html">vassouras</a></li>
+                        <li><a href="/assets/vassouras.html">Vassouras</a></li>
                         <li><a href="/assets/seguros.html">Seguros</a></li>
                         <li><a href="/assets/contato.html">Contato</a></li>
                         <li><a href="/assets/termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
-            <p class="footer-copy font-2-m cor-6">vassourax © Alguns direitos reservados.</p>
+
+            <p class="footer-copy font-2-m cor-6">Vassourax © Alguns Direitos (mágicos) Reservados.</p>
         </div>
     </footer>
 </body>
