--- a/assets/termos.html
+++ b/assets/termos.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Termos e Condições de Uso do Site.">
     <title>Termos e Condições | Vassourax</title>
     <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -15,7 +16,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="/index.html">
-                <img src="/assets/img/vassourax.svg" alt="Vassourax">
+                <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
@@ -115,20 +116,27 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="/assets/img/vassourax.svg" alt="Vassourax">
+            <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
 
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
                     <li><a href="tel:+4420939343934">+44 20 93934-3934</a></li>
-                    <li><a href="mailto:contato@vassourax.com">vassourax@becodiagonal.com</a></li>
-                    <li>Londres, Inglaterra. Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li><a href="mailto:vassourax@becodiagonal.comm">vassourax@becodiagonal.com</a></li>
+                    <li>Beco Diagonal, Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li>Londres, UK</li>
                 </ul>
 
                 <div class="footer-redes">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/youtube.svg" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/youtube.svg" width="32" height="32" alt="YouTube">
+                    </a>
                 </div>
             </div>
 
