--- a/assets/vassouras.html
+++ b/assets/vassouras.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Termos e Condições de Uso do Site.">
     <title>Vassouras | Vassourax</title>
     <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -15,7 +16,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="/index.html">
-                <img src="/assets/img/vassourax.svg" alt="Vassourax">
+                <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
@@ -38,7 +39,7 @@
 
         <div class="vassouras container">
             <div class="vassouras-imagem">
-                <img src="/assets/img/vassouras/firebolt-home.jpg" alt="Vassoura preta">
+                <img src="/assets/img/vassouras/firebolt-home.jpg" width="1120" height="680" alt="Vassoura preta">
                 <span class="font-2-m cor-0">R$ 14999</span>
             </div>
 
@@ -49,22 +50,22 @@
 
                 <ul class="font-1-m cor-8">
                     <li>
-                        <img src="/assets/img/icones/magica.svg" alt="">
+                        <img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">
                         Garantia de 10 anos
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/rastreador.svg" alt="">
+                        <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
                         Antirrastreio
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/velocidade.svg" alt="">
+                        <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
                         240 Km/h em 10 segundos
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/cerdas.svg" alt="">
+                        <img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">
                         Resistência de diamante
                     </li>
                 </ul>
@@ -76,7 +77,7 @@
         <div class="vassouras-bg">
             <div class="vassouras container">
                 <div class="vassouras-imagem">
-                    <img src="/assets/img/vassouras/thunderbolt-home.jpg" alt="Vassoura preta">
+                    <img src="/assets/img/vassouras/thunderbolt-home.jpg" width="1120" height="680" alt="Vassoura preta">
                     <span class="font-2-m cor-0">R$ 5499</span>
                 </div>
                 <div class="vassouras-conteudo">
@@ -86,22 +87,22 @@
 
                     <ul class="font-1-m cor-5">
                         <li>
-                            <img src="/assets/img/icones/magica.svg" alt="">
+                            <img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">
                             Garantia de 5 anos
                         </li>
 
                         <li>
-                            <img src="/assets/img/icones/rastreador.svg" alt="">
+                            <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
                             Acompanha um Feitiço de Desilusão
                         </li>
 
                         <li>
-                            <img src="/assets/img/icones/velocidade.svg" alt="">
+                            <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
                             80 Km/h
                         </li>
 
                         <li>
-                            <img src="/assets/img/icones/cerdas.svg" alt="">
+                            <img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">
                             Penas de Hipogrifo
                         </li>
                     </ul>
@@ -113,7 +114,7 @@
 
         <div class="vassouras container">
             <div class="vassouras-imagem">
-                <img src="/assets/img/vassouras/red-nimbus-home.jpg" alt="Vassoura preta">
+                <img src="/assets/img/vassouras/red-nimbus-home.jpg" width="1120" height="680" alt="Vassoura preta">
                 <span class="font-2-m cor-0">R$ 3999</span>
             </div>
             <div class="vassouras-conteudo">
@@ -123,22 +124,22 @@
 
                 <ul class="font-1-m cor-8">
                     <li>
-                        <img src="/assets/img/icones/magica.svg" alt="">
+                        <img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">
                         Garantia de 5 anos
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/rastreador.svg" alt="">
+                        <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
                         Acompanha um Feitiço de Desilusão
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/velocidade.svg" alt="">
+                        <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
                         70 Km/h
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/cerdas.svg" alt="">
+                        <img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">
                         Cabo de Mogno
                     </li>
                 </ul>
@@ -150,20 +151,27 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="/assets/img/vassourax.svg" alt="Vassourax">
+            <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
 
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
                     <li><a href="tel:+4420939343934">+44 20 93934-3934</a></li>
-                    <li><a href="mailto:contato@vassourax.com">vassourax@becodiagonal.com</a></li>
-                    <li>Londres, Inglaterra. Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li><a href="mailto:vassourax@becodiagonal.comm">vassourax@becodiagonal.com</a></li>
+                    <li>Beco Diagonal, Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li>Londres, UK</li>
                 </ul>
 
                 <div class="footer-redes">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/youtube.svg" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/youtube.svg" width="32" height="32" alt="YouTube">
+                    </a>
                 </div>
             </div>
 
