--- a/assets/vassouras/firebolt.html
+++ b/assets/vassouras/firebolt.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Termos e Condições de Uso do Site.">
     <title>Firebolt Black | Vassourax</title>
     <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+    <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
@@ -15,7 +16,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="/index.html">
-                <img src="/assets/img/vassourax.svg" alt="Vassourax">
+                <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
@@ -38,9 +39,9 @@
 
         <div class="vassoura container">
             <div class="vassoura-imagens">
-                <img src="/assets/img/vassouras/firebolt/firebolt1.jpg" alt="">
-                <img src="/assets/img/vassouras/firebolt/firebolt2.jpg" alt="">
-                <img src="/assets/img/vassouras/firebolt/firebolt3.jpg" alt="">
+                <img src="/assets/img/vassouras/firebolt/firebolt1.jpg" width="1120" height="880" alt="">
+                <img src="/assets/img/vassouras/firebolt/firebolt2.jpg" width="980" height="880" alt="">
+                <img src="/assets/img/vassouras/firebolt/firebolt3.jpg" width="1120" height="880" alt="">
             </div>
 
             <div class="vassoura-conteudo">
@@ -48,12 +49,12 @@
                 <div class="vassoura-comprar">
                     <a href="/assets/orcamento.html" class="botao">Comprar agora</a>
                     <span class="font-1-xs cor-6">
-                        <img src="/assets/img/icones/entrega.svg" alt="">
+                        <img src="/assets/img/icones/entrega.svg" width="14" height="10" alt="">
                         Entrega em 5 dias
                     </span>
 
                     <span class="font-1-xs cor-6">
-                        <img src="/assets/img/icones/estoque.svg" alt="">
+                        <img src="/assets/img/icones/estoque.svg" width="14" height="10" alt="">
                         18 em estoque
                     </span>
                 </div>
@@ -61,25 +62,25 @@
                 <h2 class="font1-xs cor-0">Informações</h2>
                 <ul class="vassoura-informacoes">
                     <li>
-                        <img src="/assets/img/icones/magica.svg" alt="">
+                        <img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-0">Garantia de 10 anos</h3>
                         <p class="font-2-xs cor-5">A garantia leva em consideração um feitiço inquebrável de freagem.</p>
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/velocidade.svg" alt="">
+                        <img src="/assets/img/icones/velocidade.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-0">240 Km/h em 10 segundos</h3>
                         <p class="font-2-xs cor-5">A mais rápida vassoura disponível hoje no mercado.</p>
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/rastreador.svg" alt="">
+                        <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-0">Feitiço de Desilusão</h3>
                         <p class="font-2-xs cor-5">Bruxos podem viajar de vassoura sem ser vistos pelos trouxas.</p>
                     </li>
 
                     <li>
-                        <img src="/assets/img/icones/cerdas.svg" alt="">
+                        <img src="/assets/img/icones/cerdas.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-0">Resistência de Diamante</h3>
                         <p class="font-2-xs cor-5">Cabo aerodinâmico, superfino de freixo, acabamento ultrarresistente.</p>
                     </li>
@@ -106,7 +107,7 @@
         <ul>
             <li>
                 <a href="/assets/vassouras/thunderbolt.html">
-                    <img src="/assets/img/vassouras/thunderbolt-home.jpg" alt="Vassoura preta">
+                    <img src="/assets/img/vassouras/thunderbolt-home.jpg" width="1120" height="680" alt="Vassoura preta">
                     <h3 class="font-1-xl">Thunderbolt Supreme</h3>
                     <span class="font-2-m cor-8">R$ 5499</span>
                 </a>
@@ -114,7 +115,7 @@
 
             <li>
                 <a href="/assets/vassouras/red-nimbus.html">
-                    <img src="/assets/img/vassouras/red-nimbus-home.jpg" alt="Vassoura preta">
+                    <img src="/assets/img/vassouras/red-nimbus-home.jpg" width="1120" height="680" alt="Vassoura preta">
                     <h3 class="font-1-xl">Red Nimbus</h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
                 </a>
@@ -124,9 +125,9 @@
 
     <article class="seguro-bg">
         <div class="seguro container">
-            <div class="seguro-imagem">
-                <img src="/assets/img/fotos/seguros.jpg" alt="Cedrico Diggory, aluno da Grifinória">
-            </div>
+            <picture class="seguro-imagem">
+                <img src="/assets/img/fotos/seguros.jpg" width="1360" height="1496" alt="Cedrico Diggory, aluno da Grifinória">
+            </picture>
 
             <div class="seguro-conteudo">
                 <h2 class="font-1-xxl cor-0">Voe tranquilo com o nosso <span class="cor-p1">seguro</span> Diggory.</h2>
@@ -138,20 +139,27 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="../img/vassourax.svg" alt="Vassourax">
+            <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
 
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
                     <li><a href="tel:+4420939343934">+44 20 93934-3934</a></li>
-                    <li><a href="mailto:contato@vassourax.com">vassourax@becodiagonal.com</a></li>
-                    <li>Londres, Inglaterra. Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li><a href="mailto:vassourax@becodiagonal.comm">vassourax@becodiagonal.com</a></li>
+                    <li>Beco Diagonal, Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li>Londres, UK</li>
                 </ul>
 
                 <div class="footer-redes">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="../img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="../img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="../img/redes/youtube.svg" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/youtube.svg" width="32" height="32" alt="YouTube">
+                    </a>
                 </div>
             </div>
 
