--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Oferecemos apenas produtos personalizados pela nossa equipe de bruxos artesãos, feitos ao toque de varinhas específicas e com muito apreço aos detalhes.">
     <title>Vassourax - Vassouras mágicas</title>
-    <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
+
+    <link rel="preload" href="/assets/css/style.css" as="style">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
     <header class="header-bg">
         <div class="header container">
-            <a href="./">
-                <img src="/assets/img/vassourax.svg" alt="Vassourax">
+            <a href="/index.html">
+                <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
             </a>
 
             <nav aria-label="primaria">
                 <ul class="header-menu font-1-m cor-0">
-                    <li><a href="./assets/vassouras.html">Vassouras</a></li>
-                    <li><a href="./assets/seguros.html">Seguros</a></li>
-                    <li><a href="./assets/contato.html">Contato</a></li>
+                    <li><a href="/assets/vassouras.html">Vassouras</a></li>
+                    <li><a href="/assets/seguros.html">Seguros</a></li>
+                    <li><a href="/assets/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,9 +38,10 @@
                 <a class="botao" href="/assets/vassouras.html">Escolha a sua</a>
             </div>
 
-            <div>
-                <img src="assets/img/fotos/introducao.jpg" alt="Vassoura mágica preta">
-            </div>
+            <picture>
+                <source media="(max-width: 800px)" srcset="/assets/img/vassouras/firebolt-home.jpg">
+                <img src="/assets/img/fotos/introducao.jpg" width="1280" height="1600" alt="Vassoura mágica preta">
+            </picture>
         </div>
     </main>
 
@@ -49,7 +52,7 @@
         <ul>
             <li>
                 <a href="/assets/vassouras/firebolt.html">
-                    <img src="/assets/img/vassouras/firebolt-v.jpg" alt="Vassoura preta">
+                    <img src="/assets/img/vassouras/firebolt-v.jpg" width="946" height="1044" alt="Vassoura preta">
                     <h3 class="font-1-xl">Firebolt Black</h3>
                     <span class="font-2-m cor-8">R$ 4999</span>
                 </a>
@@ -57,7 +60,7 @@
 
             <li>
                 <a href="/assets/vassouras/thunderbolt.html">
-                    <img src="/assets/img/vassouras/thunderbolt-v.jpg" alt="Vassoura preta">
+                    <img src="/assets/img/vassouras/thunderbolt-v.jpg" width="946" height="1044" alt="Vassoura preta">
                     <h3 class="font-1-xl">Thunderbolt Supreme</h3>
                     <span class="font-2-m cor-8">R$ 2499</span>
                 </a>
@@ -65,7 +68,7 @@
 
             <li>
                 <a href="/assets/vassouras/red-nimbus.html">
-                    <img src="/assets/img/vassouras/red-nimbus-v.jpg" alt="Vassoura preta">
+                    <img src="/assets/img/vassouras/red-nimbus-v.jpg" width="946" height="1044" alt="Vassoura preta">
                     <h3 class="font-1-xl">Red Nimbus</h3>
                     <span class="font-2-m cor-8">R$ 3999</span>
                 </a>
@@ -83,21 +86,21 @@
 
                 <div class="magia-vantagens">
                     <div>
-                        <img src="/assets/img/icones/magica.svg" alt="">
+                        <img src="/assets/img/icones/magica.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-0">Motor Enfeitiçado</h3>
                         <p class="font-2-s cor-5">Toda Vassourax é equipada com um feitiço propulsor que pode durar até 120h. Além disso, a energia é recarregada de acordo com a velocidade do vôo.</p>
                     </div>
                     <div>
-                        <img src="/assets/img/icones/rastreador.svg" alt="">
+                        <img src="/assets/img/icones/rastreador.svg" width="24" height="24" alt="">
                         <h3 class="font-1-m cor-0">Sigilo Bruxo</h3>
                         <p class="font-2-s cor-5">Sabemos o quão preciosa é a sua identidade e, por isso, adicionamos um sistema anti-trouxas para garantir o seu sossego.</p>
                     </div>
                 </div>
             </div>
 
-            <div class="magia-imagem">
-                <img src="/assets/img/fotos/magia.jpg" alt="">
-            </div>
+            <picture class="magia-imagem">
+                <img src="/assets/img/fotos/magia.jpg" width="1400" height="2240" alt="">
+            </picture>
         </div>
     </article>
 
@@ -105,21 +108,21 @@
         <h2 class="container font-1-xxl">Nossos parceiros<span class="cor-p1">.</span></h2>
 
         <ul>
-            <li><img src="/assets/img/parceiros/hogwarts.svg" alt="Hogwarts" title="Hogwarts"></li>
-            <li><img src="/assets/img/parceiros/bank-of-gringotts.svg" alt="Banco de Gringotts" title="Banco de Gringotts"></li>
-            <li><img src="/assets/img/parceiros/ministry-of-magic.svg" alt="Ministério da Magia" title="Ministério da Magia"></li>
-            <li><img src="/assets/img/parceiros/daily-prophet.svg" alt="O Profeta Diário" title="O Profeta Diário"></li>
-            <li><img src="/assets/img/parceiros/weasleys-wizard-wheezes.svg" alt="Gemialidades Weasley" title="Gemialidades Weasley"></li>
-            <li><img src="/assets/img/parceiros/magicoogle.svg" alt="Magicoogle" title="Magicoogle"></li>
-            <li><img src="/assets/img/parceiros/thestral.svg" alt="Thestral" title="Thestral"></li>
-            <li><img src="/assets/img/parceiros/choco-frogs.svg" alt="Sapos de Chocolates" title="Sapos de Chocolates"></li>
+            <li><img src="/assets/img/parceiros/hogwarts.svg" width="90" height="100" alt="Hogwarts" title="Hogwarts"></li>
+            <li><img src="/assets/img/parceiros/bank-of-gringotts.svg" width="100" height="100" alt="Banco de Gringotts" title="Banco de Gringotts"></li>
+            <li><img src="/assets/img/parceiros/ministry-of-magic.svg" width="100" height="100" alt="Ministério da Magia" title="Ministério da Magia"></li>
+            <li><img src="/assets/img/parceiros/daily-prophet.svg" width="238" height="50" alt="O Profeta Diário" title="O Profeta Diário"></li>
+            <li><img src="/assets/img/parceiros/weasleys-wizard-wheezes.svg" width="100" height="100" alt="Gemialidades Weasley" title="Gemialidades Weasley"></li>
+            <li><img src="/assets/img/parceiros/magicoogle.svg" width="195" height="49" alt="Magicoogle" title="Magicoogle"></li>
+            <li><img src="/assets/img/parceiros/thestral.svg" width="63" height="100" alt="Thestral" title="Thestral"></li>
+            <li><img src="/assets/img/parceiros/choco-frogs.svg" width="118" height="100" alt="Sapos de Chocolates" title="Sapos de Chocolates"></li>
         </ul>
     </section>
 
     <section class="depoimento" aria-label="Depoimento">
-        <div>
-            <img src="/assets/img/fotos/depoimento.jpg" alt="Fleur Delacour sorrindo e olhando para o alto">
-        </div>
+        <picture>
+            <img src="/assets/img/fotos/depoimento.jpg" width="1560" height="1360" alt="Fleur Delacour sorrindo e olhando para o alto">
+        </picture>
 
         <div class="depoimento-conteudo">
             <blockquote class="font-1-xl cor-p5">
@@ -163,20 +166,27 @@
 
     <footer class="footer-bg">
         <div class="footer container">
-            <img src="assets/img/vassourax.svg" alt="Vassourax">
+            <img src="/assets/img/vassourax.svg" width="210" height="23" alt="Vassourax">
 
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
                     <li><a href="tel:+4420939343934">+44 20 93934-3934</a></li>
-                    <li><a href="mailto:contato@vassourax.com">vassourax@becodiagonal.com</a></li>
-                    <li>Londres, Inglaterra. Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li><a href="mailto:vassourax@becodiagonal.comm">vassourax@becodiagonal.com</a></li>
+                    <li>Beco Diagonal, Atrás de um pub chamado Caldeirão Furado.</li>
+                    <li>Londres, UK</li>
                 </ul>
 
                 <div class="footer-redes">
-                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/instagram.svg" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/facebook.svg" alt="Facebook"></a>
-                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer"><img src="/assets/img/redes/youtube.svg" alt="YouTube"></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
+                    </a>
+                    <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/redes/youtube.svg" width="32" height="32" alt="YouTube">
+                    </a>
                 </div>
             </div>
 
@@ -184,10 +194,10 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="./assets/vassouras.html">Vassouras</a></li>
-                        <li><a href="./assets/seguros.html">Seguros</a></li>
-                        <li><a href="./assets/contato.html">Contato</a></li>
-                        <li><a href="./assets/termos.html">Termos e Condições</a></li>
+                        <li><a href="/assets/vassouras.html">Vassouras</a></li>
+                        <li><a href="/assets/seguros.html">Seguros</a></li>
+                        <li><a href="/assets/contato.html">Contato</a></li>
+                        <li><a href="/assets/termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
